--- a/_i18n/en/_posts/2020-05-04-重新學習如何生活在一起.md
+++ b/_i18n/en/_posts/2020-05-04-重新學習如何生活在一起.md
@@ -1,41 +1,40 @@
 ---
   layout: "post"
-  title: "Relearn how to live together"
-  excerpt: "The Internet has created \"new public spaces connecting digital and physical objects\"-in 318 and the Hong Kong Occupation Movement later in the same year, we have all seen such spaces form in situ."
+  title: "Re-learning how to live together"
+  excerpt: "We could see the formation of such spaces on the spot in the 318 Movement and the Occupy Central Movement that occurred a bit later in Hong Kong in the same year."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/1/19409f250bf3b34c4bab71e985bb282f2cbfd4aa_2_1380x516.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+🌻 On March 18th, 2014, young social activists, mainly hundreds of university students, charged into the Legislative Yuan to occupy the parliament chamber. At that time, the government was considering signing the controversial Cross-Strait Service Trade Agreement (CSSTA). As the members of the Executive Yuan kept on arguing at the legislature, it only took 30 seconds for the ruling Kuomingtang party to announce that the CSSTA was adopted. This triggered a public outcry.
 
- 🌻 On March 18, 2014, young social activists with hundreds of college students as the main body rushed into the Legislative Yuan to occupy the forum. At that time, the government was considering signing the "Service Agreement" with many doubts from the outside world. The ruling KMT Legislative Council announced the adoption of the "Service Agreement" in only 30 seconds in the controversial Legislative Council, and civil society was in an uproar. 
+📲 Soon after the parliament was seized, the entrances and exits were immediately blocked by the police. Therefore, on that night, many people uploaded real-time situations inside the chamber to the Internet, using Facebook, Line, and other communication Apps. It marked the beginning of network use in the 22-day occupation.
 
- 📲 Shortly after the meeting was occupied, the entrance and exit channels were immediately blocked by the police. Therefore, many people used Facebook, LINE and other communication software to spread the situation on the Internet in real time, and it has become a 22-day occupation since then. During the operation, the use of the Internet was prevalent. 
+✍️ A great number of people became deeply involved in the 318 Movement through the network. Back then, news like “The police are here” and “There are thugs” were heard inside and outside the parliament from time to time, so someone from g0v, a civic tech community, set up an on-site live station to let people passing on the streets know what was happening inside the chamber. Later on, some people adopted such methods as shorthand notes and word walls to keep the public informed of the latest.
 
- ✍️ In the 318 movement, many people are deeply involved in the scene through the Internet. At that time, the inside and outside of the occupation field heard from time to time "Police are coming" and "There are thugs" and other messages, so friends of the citizen technology community g0v set up a live broadcast station on the spot, so that people on the street can see the occupation site when they pass by. Later, some friends also took shorthand and live broadcasted on the subtitles wall to let the people passing by know the latest situation. 
+📰 Meanwhile, postgraduates from major communication universities, who upheld the common belief of “reporting the facts”, simultaneously released news on the exclusive Facebook page of the e-forum owned by the Graduate Institute of Journalism, National Taiwan University. This broke with convention— the way the traditional media worked. They co-authored news reports on the Hackpad platform and presented stories with diversified approaches such as visualized charts. Moreover, they interacted with readers on the Internet all the time to verify all sorts of information.
 
- 📰 Graduate students of major communication colleges, based on the common concept of "reporting facts", spontaneously publish news through the NTU News e-Forum Facebook page, which breaks the news of traditional media. The production process uses the hackpad platform to "co-author" to write news, and present reports through multiple methods such as visual charts, and interact with readers on the Internet to verify the information. 
+🌐 The network— from organizers’ application of communication Apps for connection to journalists’ coverage and information verification through digital tools— not only provided a channel for information flow in the 318 Movement but also brought together those who were concerned about this issue all over the world. Many following studies also stated that numerous phenomena in the 318 Movement happened to coincide with the notion of “networked social movements” proposed by Manuel Castells.
 
- 🌐 From organizers using communication software to connect, to journalists using digital tools to create reports and check messages, the Internet in the 318 movement, not only provides a channel for information circulation, but also connects people around the world who care about this issue people. Many subsequent studies also pointed out that many phenomena in the 318 movement coincide with Manuel Castells' theory of "network social movement". 
+🆕 Two years before the 318 Movement, Castells published a book called «Networks of Outrage and Hope: Social Movements in the Internet Age», which instantly turned into a classic in the fields of social movement and information communication. In this book, the author studied and observed large-scale social campaigns in different places, ranging from the Arab Spring that broke out in Tunisia in 2010 to the Occupy Wall Street movement in the U.S. in 2011. Later on, Castells’ argument was constantly proved by the protests that surged like a gathering storm across the globe for years. The “new public space that connects the digital world and the physical world” created by the network was a case in point: we could see the formation of such spaces on the spot in the 318 Movement and the Occupy Central Movement that occurred a bit later in Hong Kong in the same year.
 
- 🆕 318 Two years before the movement, Castells assembled his research and observations on large-scale social movements such as the "Arab Spring" that broke out from Tunisia in 2010 to the "Occupy Wall Street Movement" in the United States in 2011, and published [The book "Angry and Hope: Social Movement in the Internet Age"](https://www.books.com.tw/products/0010854944) soon became a classic in the field of social movement and information dissemination. During the years of ups and downs in various struggles, Castells' argument was constantly confirmed. For example, the Internet has created "new public spaces connecting digital and physical objects"-in the 318 and the Hong Kong Occupation Movement later in the same year, we all saw such spaces formed in situ. 
+☂️ Another significant observation of Castells was that he pointed out the critical features of networked social movements: individuation and autonomy. This was reflected more vividly in the Occupy Central movement of Hong Kong in 2019. In the 318 Movement, activists, led by about 20 NGOs, occupied the parliament for 22 days; in the Umbrella Movement that happened in Hong Kong in September of the same year, although the organizational core was criticized at the later stage, it was led by specific organizations and activities, which greatly resembled with the 318 Movement.
 
- Castells Another important observation is to point out the "individuality" and "autonomy" in the online social movement, which is more deeply reflected in the 2019 Hong Kong movement. The 318 movement occupied the Legislative Yuan for 22 days and was led by about 20 NGOs. In September of the same year, the umbrella movement in Hong Kong, although the voice of "anti-big stage" appeared later, certain organizations and athletes were regarded as leaders. , Still quite similar to the 318 movement. 
+🌊 A qualitative change took place in Hong Kong in 2019. Earlier from the beginning of the year, Hong Kong people took to the streets many times to protest against the extradition bill. It led to constantly reinforced police. Hence, protesters staged a shape-shifting guerilla game by responding to the call “Be water”, the famous saying of the late martial arts star Bruce Lee. They were not confined to any specific form, so they gathered anywhere anytime and then dispersed after the campaign.
 
- 🌊 This scenario has undergone a qualitative change in Hong Kong in 2019. Hong Kong people have taken to the streets to protest the "Fugitive Offenders Ordinance" many times since the beginning of the year, and the Hong Kong government's police force has been continuously upgraded, so that the athletes have called on the famous Bruce Lee star "Be water". Dispersed after the struggle. 
+🇭🇰 The approach adopted by the Hong Kong demonstrators this time disrupted the rules of the past social movements— organizers and fixed places were a must. Instead, every participant could be an organizer and everyone could make a decision. Individuals were willing to share what they were about to do and connect with other participants to quickly spread the information to thousands of and even tens of thousands of organizers elsewhere.
 
- 🇭🇰 This Hong Kong struggle has subverted the form of past social movements that must have an organizer and a fixed location, so that each participant can be an organizer, and everyone can decide that they want to be here What to do, and willing to share and connect with other participants, quickly spread the information everywhere, to thousands or even tens of thousands of other organizers. 
+🚸 Besides the movement philosophy, improved information communication technology played a pivotal role in sustaining the movement that was “just like the flow of water”. Back in 2014, the technology of public live streaming just began budding. As a result, campaigners usually had to use pictures and texts only and might not always have the experience of “co-presence”. This time, Hong Kong people took collective action by relying on the “co-presence” atmosphere created in the “Be water” movement, just as Castells said, “…individual actors to build their autonomy with likeminded people in the networks of their choice.”
 
- 🚸 In addition to the philosophy of sports, the improvement of information and communication technology is also the key to the continuous flow of "water flow" sports. In 2014, the mass broadcast technology was just budding, so athletes often still only use photos and text, and may not always achieve the feeling of "common presence". This time, the "be water" of the Hong Kong people relies on the feeling of being present together to make collective actions, as Castells said: "Individual actors can be established with like-minded people in the network of their choice. Autonomy. "
+🔊 The major part of this book seems to focus on the connotations of social movements, but in fact, Castells aims at the shared dream that is urgently essential for today’s world through these social movements— a new form of political deliberation, voice, and decision making. After the 318 Movement and the protest against the extradition bill in Hong Kong, the local election in both Taiwan and Hong Kong witnessed big shifts. In 2014, Taiwan even incorporated the spirit of open government into its administrative policy and regarded the requirements of these occupants and their supporters as its new direction and new strength.
 
- The main axis of this book seems to study the connotation of social movements. In fact, through these social movements, Castells is more directly directed to the common dream that the world urgently needs:" A new political deliberations, voices and decisions Format. "After the 318 Hong Kong Anti-Amendment Acts, elections at the local level in Taiwan and Hong Kong have undergone major changes. Starting in 2014, Taiwan has incorporated the spirit of open government into its policy, turning these occupiers and the demands of supporting the occupiers into a new direction and new force for the country. 
+🙋 This move established more direct channels of communication between the Taiwan government and citizens. For example, the National Development Council introduced Join, a public policy participation platform, in 2015 and designed a proposal section to invite citizens to submit their proposals. Related government departments must respond as long as there’s a joint signature of 5,000 people. So far, the number of visitors has exceeded 10.6 million, almost half of Taiwan’s population.
 
- 🙋 This approach has opened up many more direct communication channels between the Taiwan government and citizens. For example, the National Development Council launched the Join Citizen Participation Platform in 2015 to open up public proposals. As long as there are 5,000 people signing up, the relevant units must respond. So far, it has exceeded 10.6 million visitors-almost half of Taiwan ’s population. 
+🗺️ In February 2020, Taiwan implemented a quota policy for facial mask purchases due to the coronavirus pandemic. The National Health Insurance Administration, Ministry of Health and Welfare, collaborated with g0v to develop an open data application within as short as 72 hours. With diversified functions such as map visualization, chatting robots, and voice assistants, it enabled those in need to stay on top of the purchase places and the supply and demand information.
 
- 🗺️ In February 2020, due to the epidemic situation in Taiwan, the mask limit purchase system was implemented. The Health Insurance Department of the Ministry of Health and Welfare collaborated with g0v community friends to create corresponding open data applications in just 72 hours. Multiple channels such as maps, chatbots, voice assistants, etc. have successfully enabled friends in need to inquire about where to buy and supply and demand. 
+🗽 Today, including public opinions in policies and cooperating with social groups have become the daily routine and culture of the Taiwan government. The highly developed network environment of Taiwan has facilitated these new democratic experiments. But more importantly, since the 318 Movement, people have realized that they can meet tens of thousands of congenial friends via the Internet, then listen to each other, make concerted efforts, and finally take collective action to make a difference.
 
- 🗽 Today, incorporating people ’s opinions into policies and collaborating with civil society has become the daily routine of Taiwan ’s official culture. These new-style democratic experiments, except because Taiwan has a highly developed Internet environment, and more importantly, since the 318 movement, people learned that through the Internet, they can meet thousands of people who feel the same, and then Listen to each other, work together, and finally form a group action to promote change. 
-
- 🎁 "The legacy left by the online social movement is to create a possibility for us to re-learn how to live together in a truly democratic society." The last sentence of this book is undoubtedly given by Castells The best reminder of the world: After every social movement, it is the real beginning. Only by courageously exploring the unknown and connecting with each other can we re-create democracy together and let the future come through us. 
+🎁 “The legacy of networked social movements will have been to raise the possibility of re-learning how to live together. In real democracy.” This is the last sentence of the book that undoubtedly serves as Castell’s best warning for the world: whenever a social movement ends, it represents the true beginning. Only when we have the courage to explore the unknown and connect with each other can we work together to rebuild democracy and let the future come because of us.
