--- a/_i18n/en/_posts/2020-05-07-守護台灣-共助世界.md
+++ b/_i18n/en/_posts/2020-05-07-守護台灣-共助世界.md
@@ -9,19 +9,18 @@
     - "Social Innovation"
 ---
 
+🌐 April 28th is the 100th day of Taiwan’s Central Epidemic Command Center. Taiwan’s achievements in pandemic prevention are obvious. Many countries have come to inquire about the Taiwan model one after another.
 
-🌐 April 28th is the 100th day since the establishment of the Central Epidemic Epidemic Command Center. Taiwan has handed over the epidemic prevention achievements for many to see. Many countries have also come to consult the "Taiwan Model". 
+💯 In the past hundred days, we can see that pandemic prevention relies on not only the efforts of civil servants and medical staff but also the full participation of everyone. Hence, we make continuous efforts to share Taiwan’s experience in making the whole people collaborate while fighting against the virus.
 
-💯 Judging from this hundred-day course, the epidemic prevention work depends not only on public officials and medical staff, but also on the joint participation of all people. Therefore, how to share the Taiwan experience of "National Cooperation" is the goal of our continuous efforts while preventing virus intrusion. 
+🛫 Hence, we adopted two measures. One of them is the face masks donation campaign in which everyone can participate to offer humanitarian aid. People can log into the NHI mobile app to dedicate their quota of face masks. In less than a week after the campaign was launched, about 4 million face masks were dedicated in more than 460,000 dedicators. Currently, [the dedications made by Taiwan people](https://taiwancanhelp.com.tw/en-US/mask-dedicate) are still increasing.
 
-🛫 In this regard, we have proposed two approaches: one of them is "[mask responsive humanitarian assistance](https://taiwancanhelp.com.tw/mask-dedicate)" that everyone can participate in. Through the National Health Insurance Mobile Express app, anyone can choose to use the "number of masks that can be purchased but not purchased" as humanitarian aid. Less than a week after the plan was launched, more than 460,000 person-times and nearly 4 million masks responded. At present, the desire of Taiwanese to help the world is still increasing. 
+💡 Another campaign is called [#cohack](https://cohack.tw/en/). Everyone can invite their friends to join it. Inspired by the Hack From Home event organized by g0v, Taiwan and U.S. decided to run an online campaign to solicit suggestions on pandemic prevention. Based on the Taiwan-U.S. Joint Statement on a Partnership against Coronavirus, we listed six themes. Anyone can give their opinions online.
 
-💡 Another activity is "[Taiwan Anti-epidemic Pine](https://cohack.tw/)" where everyone can join friends. Inspired by "g0v at home pine", both Taiwan and the United States decided to open up the people of the two places to propose good ideas for epidemic prevention in an all-line way. On the basis of the "Taiwan-US Joint Statement on Epidemic Prevention Partnership", we have listed six major themes, anyone can comment online. 
+💬 Last year, the Executive Yuan and American Institute in Taiwan cooperated in developing a [digital dialogue platform](https://talkto.ait.org.tw) that used the digital tool Pol.is. Likewise, Cohack also uses this tool to let participants learn about others’ opinions in a visualized manner and thus motivate them to meditate on them. Furthermore, it will raise the possibility of reaching a consensus.
 
-💬 Like the "[" Intellectual Commonwealth-Digital Dialogue Platform](https://talkto.ait.org.tw) "co-operated by the Executive Yuan and the American Association in Taiwan last year, the Taiwan-US Epidemic Prevention Pine also uses interaction The digital tool "Pol.is" allows participants to see the relative position of their ideas and others in the visual opinion spectrum, and to think and seek the possibility of consensus. 
+⚖️ A feature of Cohack is that the sponsor will consider the laws of Taiwan while evaluating the legitimacy of every opinion and meanwhile announce them on the website for reference. For instance, some people proposed to set up procedures and send people to look for infected people from house to house and then isolate them. According to the legal group, this proposal may violate the Communicable Disease Control Act, so it has a “red light” mark that indicates it's not feasible.
 
-⚖️ One of the characteristics of the epidemic prevention pine is that the organizer will make comments on the legality of each opinion from the point of view of Taiwan law, and simultaneously open it on the website for public reference. For example, it was proposed to set up an application to allow related personnel to go door-to-door to isolate the infected person. The legal system assessed that this opinion might violate the "Infectious Disease Prevention and Control Law" and would be marked as a "red light" that cannot be implemented. 
+🎞️ Now that we announced the topics that experts have assessed, everyone can propose their solutions by producing a three-minute film and submitting them publicly, thus contributing innovative solutions to pandemic prevention.
 
-🎞️ Now that we have published the expert-assessed questions, anyone can come up with their own problem-solving concept, and make a three-minute explanatory video, public submission, and contribute innovative solutions to epidemic-related work. 
-
-🚸 During this time, many friends have spontaneously invested in the collection of Taiwan's epidemic prevention resources and shared them with foreign communities. In my opinion, these civic actions to solve social problems are the best examples of social innovation. The "mask responsive to humanitarian assistance" and the "#cohack Taiwan-US epidemic prevention pine" are ideas that echo these practices and hope to encourage more people to work together to contribute to the world. 
+🚸 Recently, many people have spontaneously provided and gathered pandemic prevention resources of Taiwan and shared them with foreign communities. In my opinion, our citizens who take action to address social issues best demonstrate social innovation. We organized the face masks donation and #cohack campaigns to support them in the hope of encouraging more people to work together and make contributions to the world.
