--- a/_i18n/en/_posts/2020-06-04-防疫新生活-隱私也不愁.md
+++ b/_i18n/en/_posts/2020-06-04-防疫新生活-隱私也不愁.md
@@ -3,23 +3,22 @@
   title: "Shangzhou column: New life of epidemic prevention, privacy is not worrying"
   excerpt: "Access to information must have a copy so that personal data can make a difference."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/2/2aa1ad934a56a1dda2c8959b6104eb568e456b30.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+💊 The epidemic situation in Taiwan has slowed down; the Central Epidemic Command Center calls on everyone to gradually return to normal life. Many countries have also begun to discuss measures to lift the restrictions. However, the virus will not disappear on its own. In addition to continuously developing new vaccines and drugs, the prevention of the possibility of more outbreaks in normal life is the core concept of the "New Life of Epidemic Prevention".
 
-💊 The recent epidemic situation in Taiwan has slowed down. The Central Epidemic Epidemic Command Center appealed to everyone to gradually return to normal life. Many countries have also begun to discuss measures to lift the ban. It's just that the virus will not disappear out of thin air. In addition to the continuous development of vaccines and drugs, how to prevent the possibility of an epidemic in addition to normal life is the core concept of "a new life of epidemic prevention." 
+🌎 In the recently concluded "#cohack Taiwan-US Epidemic Prevention Hackathon", we received enthusiastic proposals from the United States, Canada, the United Kingdom, Germany, Hungary, Japan, Taiwan and other countries, all of which are wonderful solutions for epidemic prevention. Among them, the medical status sharing platform "LogBoard Front-line support" stood out from more than 200 people and a total of 53 groups of applicants, and became one of the five winning teams.
 
-🌎 In the just-concluded "#cohack Taiwan Anti-epidemic Pine" selection, we received enthusiastic proposals from the United States, Canada, the United Kingdom, Germany, Hungary, Japan and Taiwan and other teams, all of which are new life for epidemic prevention Wonderful solution. Among them, the health sharing platform "LogBoard Support Frontline" stands out from more than two hundred people and a total of 53 groups of applicants, becoming one of the five winning teams. 
+⚖️ "Front-line support" is composed of six partners who research personal data for applications, including associate professor Chi-Chuan Wang of the Department of Pharmacy in the National Taiwan University. After meeting at the MyData Taiwan community, they found that they all wanted a medical status record platform that took into account both security and citizen participation. It was then that "LogBoard" was born.
 
-⚖️ "Support Frontline" is composed of six partners, including associate professor Wang Jijuan of the Department of Pharmacy, Taiwan University, who research the application of personal data. After getting acquainted with the MyData Taiwan community, they found each other wanted a health record platform that took into account both security and citizen participation, and "LogBoard" was born. 
+📲 The initial setting of this design was to help patients with chronic diseases, and during the epidemic prevention period, it can also be used as a practical tool for confirming the health status of people under home isolation. Anyone who downloads the mobile application "MyLog" can record their general health status, and even package the records of the past 14 days to generate a one-time web page for medical personnel to quickly grasp.
 
-📲 The initial setting of this design is to help patients with chronic diseases, and during the epidemic prevention period, it can also be used as a practical tool for confirming the health status of home isolates. Anyone who downloads the mobile application "MyLog" can record the usual health status, and even package the records of the past 14 days to generate a one-time web page for medical personnel to quickly grasp. 
+🛡️ One of the features of LogBoard is that users completely manage information independently. The platform does not actively collect data or track users. The data is stored entirely in the mobile phone. In addition to using a one-time only web sharing feature to ensure information security, users can also choose to revoke their personal footprint records, or the system will automatically delete them after 72 hours.
 
-🛡️ One of the features of LogBoard is that the user manages the information completely autonomously. The platform neither actively collects data nor tracks the user. All the data is only stored in the mobile phone. In addition to using one-time web sharing to ensure information security, users can also choose to revoke their personal footprint records, or the system will automatically delete them after 72 hours. 
+🌐 Anotheer award-winning team, Autonomy, shares the same concept, using the data provided by individuals to create a collaborative tool for maintaining public health in the community. This approach of collecting data from an individual's perspective and focusing on autonomy is the central idea of establishing a citizen-centric data network; there must be a base in data access before personal data can be used. At present, MyLog has been successfully launched on various platforms, and the LogBoard platform has also attracted the attention of people in related fields in Switzerland and the European Union.
 
-🌐 Coincidentally, another award-winning team, Autonomy, uses the same concept and uses data provided by individuals to create a collaborative tool for maintaining public health in the community. This approach of collecting data from an individual's perspective and focusing on autonomy is the central idea of establishing a citizen-centric data network: data access must have a basis before personal data can make a difference. At present, MyLog has been successively put on various platforms, and the LogBoard platform has also attracted the attention of people in related fields such as Switzerland and the European Union. 
-
-💝 In the past few months, we have learned together: The best epidemic prevention is to start in life. And through the example of #cohack winning team, it also showed me that the innovation that best meets the needs is also inspired in daily life. Taking into account the protection of privacy and social innovation, Taiwan has once again made a major step forward in preparing for the next stage of the global epidemic. 
+💝 In the past few months, we have learned that the best way to prevent epidemic disease is to start in daily life. And through the example of the #cohack winners, it also showed us that the innovation that best meets the needs is also inspired by daily life. Taking into account the protection of privacy and social innovation, Taiwan has once again made a major step forward in preparing for the next stage of the global epidemic.
