--- a/_i18n/en/_posts/2020-06-04-防疫新生活-隱私也不愁.md
+++ b/_i18n/en/_posts/2020-06-04-防疫新生活-隱私也不愁.md
@@ -1,7 +1,7 @@
 ---
   layout: "post"
-  title: "Shangzhou column: New life of epidemic prevention, privacy is not worrying"
-  excerpt: "Access to information must have a copy so that personal data can make a difference."
+  title: "Taking care of privacy in epidemic prevention"
+  excerpt: "Focusing on autonomy is the central idea of establishing a citizen-centric data network."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/2/2aa1ad934a56a1dda2c8959b6104eb568e456b30.jpeg"
   author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
