--- a/_i18n/en/_posts/2020-07-02-最好的禮物.md
+++ b/_i18n/en/_posts/2020-07-02-最好的禮物.md
@@ -1,27 +1,26 @@
 ---
   layout: "post"
-  title: "Shangzhou column: the best gift"
-  excerpt: "Let those who are conscientious to contribute their own strength and those who love to be more caring."
+  title: "The Best Gift"
+  excerpt: "When adversity strikes, we can forge a new path for ourselves through our flexibility and robustness"
   image: "https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/a/a54eb6e699ac3732dbb856437c2bb29cbbff5e03_2_1380x522.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+🎁 With the gradual implementation of the "new epidemic prevention lifestyle", the flow of people on the streets has begun returning to its former levels. Whether the economy or the general mood, things are quickly warming back up, and smiling faces can be seen in shops and restaurants everywhere. Compatriots across all sectors have been working hard throughout this time to design stimulating measures that work to further brighten those smiling faces. 
 
-🎁 With the gradual implementation of the "new life of epidemic prevention", the streets began to restore the crowds of the past, whether it is the prosperity or mood, are quickly returning to the temperature, and smiles can be seen everywhere in shops and restaurants. Friends who don't divide the industry, government, research institutes, during this period of time have always tried their best to make these smiles more open through a series of revitalization measures. 
+♻️ Among these, the creativity and diligence of a number of social innovation organizations have opened my eyes to new possibilities. For example, Zen Zhou Social Enterprise, whose mission centers on the circular economy and ecological protection and is active in developing clean plastic goods, has recently begun collaborating with China Airlines in developing an environmentally friendly travel mug. Not only is this creating new business opportunities for the aviation industry, which has been heavily affected by the pandemic, but it also connects cleverly with green consumerism and the "bring your own cutlery" movement. 
 
-♻️ Among them, the creativity and intentions of many social innovation organizations have opened my eyes. For example, Renzhou Social Enterprise, which is committed to the protection of ecology and circular economy and is committed to the development of net plastic products, has recently cooperated with China Airlines to develop an environmental protection accompanying cup. In addition to creating new business opportunities for the aviation industry affected by the epidemic, it is also ingenious It connects green consumption with the concept of "bring your own tableware". 
+🚸 Aside from collaboration in product research and development, social innovation organizations have also developed a cutting-edge model of collaboration with industry. For example, the Victory Social Welfare Foundation has collaborated with Family Mart to launch their first "Social Welfare Community Partnership Store", helping social welfare organizations to get through each wave of the pandemic's assault. It is also capable of progressing to become a self-sufficient social enterprise, ensuring mission continuity moving forwards.
 
-🚸 In addition to cooperative research and development of products, social innovation organizations have also developed new cooperation models with the industry. For example, the Victory Foundation and the Family Convenience Store have launched the first "Commonwealth Social Enterprise Partner Store" to help charitable organizations get out of the impact of the epidemic. In addition, I can gradually transform into a self-sufficient social enterprise, so that the mission can be inherited forever. 
+👩‍⚕️ Social innovation organizations are not only concerned with looking after themselves; many are also directly invested in the work of pandemic prevention. The Da Ai Sewing Cooperative was previously focused primarily on producing cultural and artistic goods and handmade textile bags. However, this year they have received orders for the production of medical personal protective clothing. This group of community members, who rebuilt livelihoods with the help of the cooperative in the wake of Typhoon Morakot, are currently still working around the clock to support staff fighting the epidemic.
 
-👩‍⚕️ Apart from taking care of themselves, there are also social innovation organizations directly involved in epidemic prevention work. In the past, Daai Sewing Production Cooperative, which mainly produces cultural and creative products and handmade cloth bags, received an order for medical isolation clothes this year. This group of members who rebuilt their lives through cooperatives after the Morakot storm is still rushing to work for the epidemic prevention staff. 
+🎪 The experience of the Da Ai Sewing Cooperation has encouraged many other social innovation organizations to think about how they might more effectively contribute to society.
 
-🎪 The experience of loving sewing makes many social creation organizations start to think: How to warm the society more widely? 
+💝 As such, in response to calls from the Small and Medium Enterprise Administration, almost 30 organizations with innovative products selected in this year’s Buying Power catalogue, have come together as partners to launch “Power Taiwan: Warm Heart Gifts". Each of the gifts, ranging from hygiene products to facemasks, come from the goodwill of the social innovation partners. In particular, the gift packaging was developed in collaboration with the Man Fair Workshop, Hsinchu, where it is handmade by individuals with disabilities.
 
-💝 Therefore, under the call of the Small and Medium Business Administration of the Ministry of Economic Affairs, nearly thirty organizations selected for this year's Buying Power Co., Ltd. worked together to launch the "Power Taiwan Warm Heart Ritual", from washing supplies to mask sets Each gift is the true intention of the social creation partners. Among them, the gift box packaging is more special in cooperation with Hsinchu's "Slow Flying Children Refuge Factory", which are all hand-made by people with disabilities. 
+🌏 In the past six months, the world's industrial development and way of life have undergone dramatic changes, and the undulations from these changes have yet to settle. These partners in social innovation have encouraged us to see that, when adversity strikes, we can forge a new path for ourselves through our flexibility and robustness, showing wider society that there are new possibilities. 
 
-🌏 Since six months, the global industrial development and life style have changed dramatically, and it is still unrest. These social creation partners let us see: How to walk out of a different path for yourself with flexibility and resilience when the accident suddenly comes, and also let the public see new possibilities. 
-
-🧧 Inspired by the physical actions of these friends, in addition to the "three-fold revitalization coupon" that went on the road in July, in addition to the purchase of three thousand yuan of social creation products, I will also use the digital full reward of two thousand yuan. Love donates to charity groups through donation codes. It is hoped that through diversified payment methods and channels of use, people who are interested can contribute to their strength and those who love can be more forgiving. 
+🧧 Encouraged by the good example set by these friends here, I will not only use the Triple Stimulus Voucher, launched in July, to buy NT$3,000 of social innovation products, but I will also give the full amount of returns, NT$2,000, as a donation to a social welfare organization to express my support. It is my hope that no matter which payment methods you prefer, compassionate people will be encouraged to give in accordance with their means and that people with love in their hearts will more readily open it to the world.
