--- a/_i18n/en/_posts/2020-07-30-藝術・人.md
+++ b/_i18n/en/_posts/2020-07-30-藝術・人.md
@@ -1,27 +1,26 @@
 ---
   layout: "post"
-  title: "Shang and Zhou Column: Art·People"
-  excerpt: "Art combines social innovation to open up new possibilities for the lives of different friends."
+  title: "Art · People"
+  excerpt: "Art, combined with social innovations, can open up new possibilities for the lives of different people."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/4/48b7d83147995d0b533ed091bf008b27e24e0194.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+🏆 Having braved through public votings and two collaborative workshops, a total of 24 teams entered the second round of this year's Presidential Hackathon. After the second-round selection meeting on July 13th, the 10 teams entering the final round have emerged.
 
-🏆 After the baptism of popular vote and two collaborative workshops, a total of 24 teams entered the re-election in this year’s President’s Cup hackathon. After the re-election meeting on July 13, 10 teams have been selected Baked. 
+🎨 Every team that entered the second round had very ingenious and feasible ideas. Even if not selected, all teams brought exciting proposals for social innovations that one would look forward to. Among them, the one that impressed me the most was the "Cultural Habitat" to create guides for the visually impaired.
 
-🎨 Each team that enters the re-election is extremely ingenious and practical. Even if it is not selected, it is an expected social innovation proposal. Among them, what impressed me the most was the construction of a &quot;cultural habitat&quot; for the visually impaired. 
+🕶️ The idea of the Cultural Habitat came from the personal experience of a team member. As a civil servant in charge of cultural affairs, Iris Hsieh once saw a visually impaired visitor in an art gallery who missed a personal guided tour and had to settle for an audio guide. However, a typical audio guide is mostly used to supplement background knowledge. It is difficult for visually impaired people to experience the visual content, and hence they cannot pick up all aspects of an exhibition.
 
-🕶️ The concept of cultural habitat comes from the personal experience of team members. As a civil servant in charge of cultural business, Xie Siying once saw a visually impaired friend in an art gallery before he could participate in a dedicated commentary, so she could barely use the audio guide. However, the general audio guide is mostly to supplement background knowledge. It is difficult for visually impaired friends to experience the visual content, nor can they understand the whole exhibition. 
+😎 Therefore, Iris Hsieh took the initiative and submitted a proposal at the Presidential Hackathon, looking to integrate the inter-library loans and collections of various museums and establish a complete database for oral images. Through event connections and recommendations from friends, the team gradually gained partners including front-end and back-end engineers, UI&UX designers, and system analysts. Together they created the prototype of "Art For All".
 
-😎 Therefore, Xie Siying took the initiative to propose a hackathon for the President&#39;s Cup, hoping to integrate the inter-library collections of various museums and establish a complete resource library for oral images. Through event matchmaking and friend recommendations, the team has successively joined partners including front-end and back-end engineers, UI &amp; UX, and system analysts to create the prototype of &quot;Art For All&quot;. 
+🗣️ In merely nine weeks from the proposal to the review, through abundant research, market analysis, and interviews with visually impaired people and relevant experts, they created a website prototype that can fully operate the front and the back ends. What is special about "Art For All" is that it not only can be used as a mobile art system for the visually impaired and disadvantaged but also enables the general public to conduct online curation with the open collection resources. Currently, they have already negotiated with Pu Tian-sheng Sculpture Memorial Museum and other institutions regarding help to create a database of oral images.
 
-🗣️ In just nine weeks from proposal to review, they used a lot of research, market analysis, and interviews with visually impaired people and related experts to create a website prototype that can fully operate the front and back ends. The special feature of &quot;Art For All&quot; is not only a mobile art system for visually impaired friends and disadvantaged partners, but also allows the general public to conduct online curation through the open collection of resources. At present, they have successively negotiated with Pu Tiansheng Sculpture Memorial Hall and other institutions to help build a database of oral images. 
+💬 Another social innovation that also uses "museum cultural equality" as its core concept is the National Palace Museum's "Museum Lab of Lives in Disorder" exhibition at the C-LAB (Taiwan Contemporary Cultural Lab). The exhibition is jointly curated by the National Palace Museum and Easy Clubhouse (Cih-Fang). Using cultural relics as media, the joint creation of contemporary artists and Easy Clubhouse members prompts the audience to rethink the daily lives of the mentally disordered. A few days ago, the National Palace Museum also reached out to the PDIS team of the Executive Yuan to hold workshops and invite stakeholders to join the creative team, in order to understand the relationship between cultural relics and people with mental disorders. These attempts have all received great responses.
 
-💬 The same social innovation with the core concept of &quot;Museum Cultural Equality&quot; is the &quot;Spiritual Exhibition&quot; of the Forbidden City exhibited at the C-LAB (Taiwan Contemporary Culture Experimental Ground). The Spiritual Exhibition is jointly curated by the Forbidden City and Cifang Care Center. It uses cultural relics as a medium, and through the joint creation of contemporary artists and Cifang members, the audience rethinks the daily life of the mentally handicapped. A few days ago, the Palace Museum also actively contacted the PDIS team of the Executive Yuan to hold a workshop and invite interested parties to join the creative process to understand the relationship between cultural relics and friends with disabilities. These attempts have received great response. 
-
-🎁 The results of the first wave of &quot;Art FUN Coupons&quot; last week allowed the arts and literature circles to formally gain substantial support from 2.1 million friends. The cultural habitat and spiritual exhibition demonstrate to us how &quot;art combined with social innovation&quot; can open up new possibilities for the lives of different friends. And friends like me who did not win the &quot;Art FUN Voucher&quot; still have many channels to do their best for beautiful things. 
+🎁 The results of the first wave of the "Art FUN Coupon" lottery last week officially brought to the arts and culture community the instrumental support from two million friends. The Cultural Habitat and the Museum Lab of Lives in Disorder exhibitions demonstrated to us how "art combined with social innovations" can open up new possibilities for the lives of different people. For those like me who did not win the "Art FUN Coupon" lottery, there are still many ways to contribute to beautiful things.
 
  <iframe width="560" height="315" src="https://www.youtube.com/embed/cXn_US6xCZw" frameborder="0" allowfullscreen></iframe> 
