--- a/_i18n/en/_posts/2020-08-03-說到故宮，你一定不會想到說明卡.md
+++ b/_i18n/en/_posts/2020-08-03-說到故宮，你一定不會想到說明卡.md
@@ -1,71 +1,70 @@
 ---
   layout: "post"
-  title: "Speaking of the Forbidden City, you would never think of an explanation card"
-  excerpt: "\"What kind of explanatory text does the audience need most?\" The Forbidden City turned to PDIS to cooperate and created a collaborative meeting with a completely different look."
+  title: "Speaking of the National Palace Museum, you wouldn't expect the illustration card"
+  excerpt: "What kind of illustration card would the audience need most? The National Palace Museum has collaborated with PDIS to create a completely different kind of collaborative meeting.
+"
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/d/d397c2668a16bdced280756e8736cf34eb20f706.jpeg"
-  author: "許恩恩"
+  author: "En-En Hsu"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
+In the past, the collaborative meetings were usually held on social issues and public policies of certain concerns and the main method of collaboration was through the process of "discussion".
 
-In previous collaboration meetings, because the themes were mostly social issues and public policies with a certain degree of attention, the main method of collaboration was usually through the process of &quot;discussion&quot;. 
+However, for the 67th collaboration meeting of the open government, we spent more time on "creation and experience", in addition to exploring the needs of people of different identities for "illustration card".
 
-However, the 67th government collaboration meeting &quot;Forbidden City Dialogue Painting Exhibition: Dialogue and Co-creation&quot; was opened. In addition to exploring the needs of people of different identities for &quot;description cards&quot;, we spent more time on &quot;creating &quot;Experience&quot; as a collaborative method. 
+The participants were recruited by the National Palace Museum through the Internet, and they were designated as "1. teachers and students (students and employees) of museum-related subjects; 2. high school teachers who will bring their students to visit the National Palace Museum; 3. people with engineering, technology or science backgrounds who like to visit science museums; 4. parents or housewives whose children are currently in elementary schools; 5. senior citizens over 65 years old; 6. people who work in the field of exhibition or graphic design; 7. pilgrims who visit museums as part of their foreign travels".
 
-This time the participants were recruited by the Forbidden City through the Internet. Several people with specific identities were designated &quot;1. Teachers and students of museum-related departments (studying and working), 2. Will take students there High school teachers visiting the Forbidden City, 3. Science and engineering, technical or scientific backgrounds/people who like to visit science museums, 4. Parents/housewives whose children are currently in elementary school, 5. Elders over 65 years old, 6. Exhibition venues or planes Design practitioners, 7. Pilgrims who must visit museums when traveling abroad.&quot; 
+<figure>
+  <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/b/b3269f7629d740ead8286154e0a26654161a1d8a.png">
+  <figcaption> Enrollment Page for Recruiting Participants </figcaption>
+</figure>
 
- <figure> 
- <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/b/b3269f7629d740ead8286154e0a26654161a1d8a.png"> 
- <figcaption> Enrollment page for recruiting participants </figcaption> 
- </figure> 
+###### Source：The National Palace Museum Official Website
 
-###### Source: The official website of the Palace Museum
+The participants were able to understand the cards to a greater extent than the general public as their lives and work were more relevant to the exhibition. After a guided tour, everyone was able to quickly dive into a topic that may not be familiar to the general public, and we were able to use a simple toolkit to summarize different needs and respond to different levels of suggestions.
 
-Come to the scene, the participants actually have a better understanding of the card than the general public, because their lives and work are more relevant to the exhibition . After the guided tour, everyone can quickly dive into this topic that the general public may not be so familiar with. We also use a simple tool list to summarize different needs and correspond to different levels of opinions. 
+We then moved on to the main event, "Co-Creation", where we asked the participants to put aside what they already know, stop expressing verbally, and instead, while looking at the exhibits together, touch different materials with their hands, and create an "illustration card", allowing the participants to experience the relationship between this "object" and us.
 
-Next, we enter the &quot;co-creation&quot; link of the main event. Instead, we ask everyone to temporarily put aside the existing knowledge, stop the expression of words, and instead watch the exhibits together, touch different things with both hands. The process of actually creating an &quot;explanation card&quot; to allow participants to experience the relationship between this &quot;item&quot; and us. 
+<figure>
+  <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/3/31e0890e563104c0d4ece7f3b78894df6480f0ee.jpeg">
+  <figcaption> Enter the "Co-Creation" section </figcaption>
+</figure>
 
- <figure> 
- <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/3/31e0890e563104c0d4ece7f3b78894df6480f0ee.jpeg"> 
- <figcaption> Enter the &quot;co-creation&quot; link </figcaption> 
- </figure> 
+In addition to the improvisation on-site, the unique conditions on the closing day of the exhibition also allow the participants to bring their unique illustration cards into the exhibition room, making them more aware of the three-dimensional spatiality of the cards.
 
-In addition to on-site improvisation, at the same time, with the unique conditions of closing the venue on the spot, participants can bring their unique instruction cards into the exhibition room and make participants more aware of the existence of the instruction cards Three-dimensional sense of space. 
+<figure>
+  <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/4/4924261d43ea6e53b69dfb0cae45b7b9897debd8.jpeg">
+  <figcaption>The participants re-enter the exhibit room with their illustration card</figcaption>
+</figure>
 
- <figure> 
- <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/4/4924261d43ea6e53b69dfb0cae45b7b9897debd8.jpeg"> 
- <figcaption> Participants re-enter the booth with their own instruction cards </figcaption> 
- </figure> 
-
-In the exhibition room, including lighting, showcases, moving lines, etc., as well as the physical distance between the card and the exhibits, the experience brought to the audience is somewhat different from the original feeling when creating. Listening to different participants introduce their instruction cards and explain the process of &quot;how to introduce this exhibit&quot;, which also inspired more imagination. Therefore, returning to the discussion table in the end, many people&#39;s feedback is that in this process, I can more imagine the multi-faceted consideration of the overall curatorial. 
-
-
- <figure> 
- <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/2/2ca73b03180184fee26e8c77654145112c08b2a1.jpeg"> 
- <figcaption> Participants &quot;explain&quot; with their own instruction card </figcaption> 
- </figure> 
-
-Actually, many policies, like the instruction card, need to respond to a variety of diverse needs. They take into account too many aspects and need to choose. Administrative agencies have their professional and overall considerations. When museums and curators think about an exhibition, they also have many considerations. These comprehensive designs may not completely meet the needs of users, so it is necessary to listen to the opinions of multiple parties in real time. 
-
-However, whether the process of collaboration is through discussion and co-creation, the conclusion may be that government agencies obtain suggestions for amendments and decision-making to make governance more in line with the needs of the people, or it may be that the people better understand the practice of government operations and go back to adjust policies It is recommended to even come in to help. No one end of the voice is absolutely correct, but a partnership that trusts each other and complements each other. This is the value that an open government should reflect. 
-
-So, after the proactive proposal of the Forbidden City PO (Open Government Liaison), we started this series of collaborative processes and made a meaningful attempt for both PDIS and the Forbidden City. Let&#39;s end with the sharing from the Forbidden City PO in the collaboration meeting that day! 
+In the exhibition room, elements such as lighting, display cabinets, flow, etc., as well as the physical distance between the cards and the exhibits, gave the audience an experience that was somewhat different from the one they had experienced during creation. The process of listening to different participants present their cards and explain "how to introduce the exhibit" also stimulated more imagination. So, finally, returning to the discussion table, many people's feedback was that they were able to better consider the multi-faceted nature of the curatorial process.
 
 
- <figure> 
- <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/9/977fa97d1ea3911a8fe499af851a8865d18301a7.jpeg"> 
- <figcaption> The Palace Museum PO shared his observations at the collaboration meeting </figcaption> 
- </figure> 
+<figure>
+  <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/2/2ca73b03180184fee26e8c77654145112c08b2a1.jpeg">
+   <figcaption> The participants "explain" their own illustration cards </figcaption>
+</figure>
 
-&quot;Although the Forbidden City is very well-known to the public, few people have never been to the Forbidden City when they were students. But to be honest, if you don&#39;t visit the Forbidden City for a lifetime, it will not affect your daily life.
-| |Even so, we still use the opportunity of this painting exhibition to exhibit many national treasure-level creations, and upgrade a non-cultural relics &quot;explanation card&quot; to the same status as the cultural relics in the exhibition. This exhibition that I have seen from when I was a child to now is a pioneering work. 
+Many policies, like the cards, need to respond to a wide range of needs, and there are too many options to choose from. Museums and curators also have many considerations to make when thinking about an exhibition. These holistic designs may not be entirely in line with the needs of the users, and it is important to listen to a wide range of views in real-time.
 
-We have also successfully cooperated with PDIS, using collaborative meetings, so that everyone can speak freely and express their opinions on the instruction card. After digesting these opinions, we will use the feasible part as a reference for future curation in the courtyard, and there will be some plans that can be adopted. 
+However, a collaborative process, whether through discussion or co-creation, may result in government agencies gathering suggestions for changes to make their policies more responsive to the needs of the public, or in the public gaining a better understanding of how the government works and coming back to adjust policy proposals or even help out on the ground. No one voice is entirely right, but rather a trusting and complementary partnership, and this is the value of open government.
 
-In addition, we also hope that everyone will have more confidence in the various oriented action plans promoted by Political Commissar Tang Feng. 」
+So, after the proactive proposal from the National Palace Museum PO (Open Government Participation Officer), we started the series of the collaboration processes and made a meaningful attempt for both PDIS and the National Palace Museum. Let's end with what the National Palace Museum PO shared at the collaboration meeting that day!
 
+<figure>
+  <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/9/977fa97d1ea3911a8fe499af851a8865d18301a7.jpeg">
+   <figcaption> The National Palace Museum PO shared his observations at the Collaboration Conference </figcaption>
+</figure>
+
+“The National Palace Museum is very well-known to the public, and there are very few people who have never been to the National Palace Museum when they were students. But honestly, if you don't visit the National Palace Museum for the rest of your life, it won't have much impact on your daily life.
+
+Even so, we still take this opportunity to showcase many of our national treasures and elevate the non-artifact "illustration card" to the same status as the artifacts on display. This is a first for an exhibition I've seen since I was a kid.
+
+We have also successfully collaborated with PDIS to hold a collaborative meeting to allow everyone to express their views on the illustration cards. We will assimilate these ideas and use them as a reference for future curatorial work in the hospital, and we will have some proposals that we can adopt.
+
+Besides, we also hope that you will have more confidence in the various action plans of the open government advocated by minister Audrey Tang.”
 
  <iframe width="560" height="315" src="https://www.youtube.com/watch?v=O5BCwuzi9OM&feature=youtu.be" frameborder="0" allowfullscreen></iframe> 
 
