--- a/_posts/2020-08-03-說到故宮，你一定不會想到說明卡.md
+++ b/_posts/2020-08-03-說到故宮，你一定不會想到說明卡.md
@@ -67,6 +67,6 @@ tags:
 除此之外，我們也希望大家對於唐鳳政委推動的開放政府各種面向的行動方案能夠更有信心。」
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=O5BCwuzi9OM&feature=youtu.be" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/O5BCwuzi9OM" frameborder="0" allowfullscreen></iframe>
 
 
